--- a/src/Styles/Intro.module.css
+++ b/src/Styles/Intro.module.css
@@ -2,7 +2,7 @@
 
 .intro {
   background-color: var(--color-background);
-  padding: 5rem 2rem 0.5rem;
+  padding: 0rem 2rem 0.5rem;
   color: var(--color-brown-dark);
 }
 
