--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -33,4 +33,5 @@ html {
   flex: 1;
   display: flex;
   flex-direction: column;
+  padding-top: 80px;
 }
